--- a/serverless.yml
+++ b/serverless.yml
@@ -26,7 +26,7 @@ provider:
 functions:
   generate-cloudcraft:
     name: ${self:service}-${self:custom.stage}-generate-cloudcraft
-    handler: handler.generate_from_cloudcraft
+    handler: handler.handler
     description: Generate all from Cloudcraft URL (stage=${self:custom.stage})
     memorySize: 512
     events:
@@ -38,7 +38,6 @@ functions:
 plugins:
   - serverless-domain-manager
   - serverless-python-requirements
-  - serverless-apigw-binary
   - serverless-plugin-tracing
 
 custom:
@@ -59,10 +58,6 @@ custom:
     pipCmdExtraArgs:
       - --cache-dir
       - .requirements-cache
-
-  apigwBinary:
-    types:
-      - "application/zip"
 
 package:
   exclude:
