--- a/serverless.yml
+++ b/serverless.yml
@@ -9,13 +9,16 @@ provider:
   region: eu-west-1
   profile: private-anton
   tracing: true
+  environment:
+    S3_BUCKET: "dl.modules.tf"
+    S3_DIR: ${self:custom.stage}
   iamRoleStatements:
     -  Effect: "Allow"
        Action:
          - "s3:*" # "s3:PutObject" plus something more plus stage name
        Resource:
-         - "arn:aws:s3:::dl.modules.tf/*"
-         - "arn:aws:s3:::dl.modules.tf"
+         - "arn:aws:s3:::${self:provider.environment.S3_BUCKET}/${self:provider.environment.S3_DIR}/*"
+         - "arn:aws:s3:::${self:provider.environment.S3_BUCKET}/${self:provider.environment.S3_DIR}/"
     - Effect: "Allow" # xray permissions (required)
       Action:
         - "xray:PutTraceSegments"
