--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Anton Babenko <anton@antonbabenko.com>",
   "license": "ISC",
   "devDependencies": {
     "serverless-domain-manager": "^2.3.6",
     "serverless-plugin-tracing": "^2.0.0"
   },
   "dependencies": {
-    "serverless-python-requirements": "^4.0.0"
+    "serverless-python-requirements": "^4.0.2"
   }
 }
