--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "modules-tf-generate",
+  "name": "modules.tf-lambda",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
