Fixed styling mostly

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,15 @@ indent_style = space
 max_line_length = 0
 trim_trailing_whitespace = false
 
+[*.py]
+max_line_length = 120
+indent_style = space
+indent_size = 4
+ignore_frosted_errors = E103
+skip = runtests.py,build
+balanced_wrapping = true
+not_skip = __init__.py
+
 [Makefile]
 tab_width = 2
 indent_style = tab
