--- a/serverless.yml
+++ b/serverless.yml
@@ -60,9 +60,8 @@ custom:
   pythonRequirements:
     fileName: requirements-lambda.txt # requirements-lambda.txt does not have heavy libraries like matplotlib, python-lambda-local which are required for debug locally
     dockerizePip: true
-    pipCmdExtraArgs:
-      - --cache-dir
-      - .requirements-cache
+    useDownloadCache: true
+    useStaticCache: true
 
 package:
   exclude:
