--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["Infrastructure as code", "Terraform", "AWS"],
   "author": "Anton Babenko <anton@antonbabenko.com>",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "serverless-domain-manager": "^2.6.5",
     "serverless-plugin-tracing": "^2.0.0"
   },
   "dependencies": {
-    "serverless": "^1.31.0",
-    "serverless-python-requirements": "^4.2.2"
+    "serverless": "^1.32.0",
+    "serverless-python-requirements": "^4.2.5"
   }
 }
