--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["Infrastructure as code", "Terraform", "AWS"],
+  "keywords": [
+    "Infrastructure as code",
+    "Terraform",
+    "AWS"
+  ],
   "author": "Anton Babenko <anton@antonbabenko.com>",
   "license": "MIT",
   "devDependencies": {
@@ -14,7 +18,7 @@
     "serverless-plugin-tracing": "^2.0.0"
   },
   "dependencies": {
-    "serverless": "^1.32.0",
+    "serverless": "^1.34.1",
     "serverless-python-requirements": "^4.2.5"
   }
 }
