--- a/templates/root/template/.gitignore
+++ b/templates/root/template/.gitignore
@@ -4,9 +4,18 @@
 *.tfstate*
 crash.log
 
+# Copies of main_providers.tf
+main_providers.tf
+
+# Except original (see related issue - https://github.com/gruntwork-io/terragrunt/issues/785)
+!common/main_providers.tf
+
 # Secrets are not allowed in general
 *.key
 *.pem
+
+# Secrets are encrypted using git-crypt
+!secrets/*
 
 # OS X
 .history
