--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-aws-xray-sdk==0.97
+aws-xray-sdk>=2.0
 boto3==1.7.3
 botocore==1.10.3
 cookiecutter==1.6.0
-matplotlib==2.2.2
-networkx==2.1
-petname==2.2
-python-lambda-local==0.1.5
-requests>=2.19.1
+networkx==2.4
+petname==2.6
+python-lambda-local==0.1.8
+requests>=2.22.0
