Trigger with ALB instead of API GW

--- a/serverless.yml
+++ b/serverless.yml
@@ -43,6 +43,22 @@ functions:
           path: /
           cors: true
 
+  generate-cloudcraft-alb:
+    name: ${self:service}-${self:custom.stage}-generate-cloudcraft
+    handler: handler.handler
+    description: Generate all from Cloudcraft URL (stage=${self:custom.stage})
+    memorySize: 1536
+    events:
+      - alb:
+          listenerArn: arn:aws:elasticloadbalancing:eu-west-1:307990089504:listener/app/modulestf/40114c366ec482df/e781b15a76f7bff5
+          priority: 1
+          conditions:
+            path: /.*
+            method:
+              - GET
+              - POST
+              - OPTIONS
+
 plugins:
   - serverless-domain-manager
   - serverless-python-requirements
