--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,6 +53,10 @@ jobs:
       #        env:
       #          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
 
+      - name: npm install
+        uses: actions/npm@master
+        with:
+          args: install
 
       - name: serverless deploy
         uses: ./.github/actions/serverless
