--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install Serverless Framework and other
         run: |
-          npm install
+          npm install -g
 
       - name: Deploy Lambda function to dev
         run: |
