--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,17 +34,11 @@ jobs:
       - name: Install Serverless Framework and other
         run: |
           npm install -g
-          which serverless
-          which sls
-          echo $PATH
 
-      - name: Deploy Lambda function to dev
-        run: |
-          PATH="$PATH:/home/runner/.local/bin"
-          which serverless
-          which sls
-          echo $PATH
-          # serverless deploy --stage dev --force --verbose
+      - name: Serverless deploy to dev
+        uses: serverless/github-action@master
+        with:
+          args: deploy --stage dev --force --verbose
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
