--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,10 @@ jobs:
 
       - name: Install Serverless Framework and other
         run: |
-          npm install -g
+          npm install -g serverless
+
+      - name: Deploy Lambda function to dev
+        run: |
           PATH="$PATH:/home/runner/.local/bin"
           serverless deploy --stage dev --force --verbose
         env:
