--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Serverless Framework and other
         run: |
           npm install -g serverless
-          npm install -g
+          npm install
           pip install -r requirements.txt
           npm list | grep serverless-python-requirements
 
