--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
   ],
   "author": "Anton Babenko <anton@antonbabenko.com>",
   "license": "MIT",
-  "devDependencies": {
-    "serverless-python-requirements": "^5.1.0"
-  },
+  "devDependencies": {},
   "dependencies": {
     "opencollective-postinstall": "^2.0.2",
     "serverless": "1.65.0",
     "serverless-plugin-thundra": "^2.4.2",
-    "serverless-plugin-tracing": "^2.0.0"
+    "serverless-plugin-tracing": "^2.0.0",
+    "serverless-python-requirements": "^5.1.0"
   },
   "collective": {
     "type": "opencollective",
