--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,8 @@
-# https://github.com/yildizozan/tenserflow-lambda/blob/2c29535b9af0a396ca13e53aada10e46b0579791/.github/workflows/deploy.yml
-# https://github.com/destination-unknown/destination-unknown-backend-serverless/blob/master/.github/workflows/main.yml
-# https://github.com/search?utf8=%E2%9C%93&q=extension%3Ayml+path%3A.github%2Fworkflows%2F+serverless+python&type=Code&ref=advsearch&l=&l=
-
-name: Verify and autodeploy to staging environment
+name: Autodeploy to dev environment
 
 on:
   push:
     branches:
-      - deploy-alb-external
       - master
 
 jobs:
@@ -22,7 +17,7 @@ jobs:
         with:
           python-version: 3.7
 
-      - name: Install dependencies
+      - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install --user pipenv
@@ -31,7 +26,7 @@ jobs:
         with:
           node-version: 13
 
-      - name: Install Serverless Framework and other
+      - name: Install Serverless Framework and other project dependencies
         run: |
           npm install -g serverless
           npm install
