--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+# [ci skip] workaround from https://github.com/srz-zumix/ci-skip/blob/master/docs/github/WORKAROUND.md
+
+
 name: Autodeploy to dev environment
 
 on:
@@ -6,8 +9,15 @@ on:
       - master
 
 jobs:
+  prepare:
+    runs-on: ubuntu-latest
+    if: "! contains(github.event.head_commit.message, '[ci skip]')"
+    steps:
+      - run: echo "${{ github.event.head_commit.message }}"
+
   deploy:
     runs-on: ubuntu-latest
+    needs: prepare
 
     steps:
       - uses: actions/checkout@v2
