docs: Fix a few more links
- Direct traffic to app.cloudcraft.co subdomain where applicable
- Fix shared blueprint test link
- Minor grammar fixes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modules.tf-lambda",
   "version": "2.0.0",
-  "description": "From visual diagrams created with Cloudcraft.co to infrastructure as code using Terraform and Terragrunt",
+  "description": "From visual diagrams created with Cloudcraft to infrastructure as code using Terraform and Terragrunt",
   "main": "index.js",
   "private": true,
   "scripts": {
